# acp-stack

./: .dockerignore  .gitignore  .rules  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  NOTICE  README.md  TRADEMARKS.md  install.sh  railway.toml
.github/workflows/: dev-build.yml  docker-test.yml  install-systemd-smoke.yml  install-systemd-test.yml  release-gate-tests.yml  release.yml
data/: agents.toml  claude_code_providers.toml  env_vars.toml  mapping.toml  providers.toml  registry.toml  skills.toml
docs/agents/: amp.md  claude-code.md  codex.md  cursor.md  goose.md  kimi.md  opencode.md  pi.md
docs/changelogs/: v0.1.0.md  v0.1.1.md  v0.1.2.md  v0.1.3.md
docs/deploy/: caddy.md  cloudflare.md  docker.md  nginx.md  systemd.md  vm.md
docs/mgmt/: architecture.md  development.md  roadmap.md  tech-stack.md
docs/specs/: array.md  cli.md  config.md  extensions.md  init.md  mcp.md  messaging-clients.md  project-spec.md  runtime.md  security.md  state-logging.md
docs/specs/acp/: acp-bridge.md
docs/specs/acpctl/: acpctl.md
docs/specs/agents/: api_key.md  config.md  registry.md  skills.md  support.md
docs/specs/api/: api.md
docs/specs/sdk/: python.md  typescript.md
docs/todos/: phase_1.md  phase_2.md  phase_3.md  phase_4.md  phase_5.md
docs/todos/v0.1.0/: phase_1.md  phase_2.md  phase_3.md  phase_4.md  phase_5.md  supabase-logging.md
docs/todos/v0.1.1/: acp-client-capabilities.md
docs/todos/v0.1.2/: network-sandbox.md  supabase-logging.md
migrations/: 001_init.postgres.sql  001_init.sqlite.sql  002_auth_failures_schema.postgres.sql  002_auth_failures_schema.sqlite.sql  003_agent_capabilities.postgres.sql  003_agent_capabilities.sqlite.sql  004_sessions.postgres.sql  004_sessions.sqlite.sql  005_commands_schema.postgres.sql  005_commands_schema.sqlite.sql  006_permissions.postgres.sql  006_permissions.sqlite.sql  007_events_source.postgres.sql  007_events_source.sqlite.sql  008_sink_outbox.postgres.sql  008_sink_outbox.sqlite.sql  009_installer_runs_step.postgres.sql  009_installer_runs_step.sqlite.sql  010_installer_runs_version.postgres.sql  010_installer_runs_version.sqlite.sql  011_installer_runs_log_dir.postgres.sql  011_installer_runs_log_dir.sqlite.sql  012_init_runs.postgres.sql  012_init_runs.sqlite.sql  013_installer_runs_apply_run_id.postgres.sql  013_installer_runs_apply_run_id.sqlite.sql  014_security_runs.postgres.sql  014_security_runs.sqlite.sql  015_prompts_lifecycle_extension.postgres.sql  015_prompts_lifecycle_extension.sqlite.sql  016_command_output_reconnect.postgres.sql  016_command_output_reconnect.sqlite.sql  017_prompt_message_ids.sqlite.sql  018_installer_runs_operation_method.postgres.sql  018_installer_runs_operation_method.sqlite.sql  019_stack_update_runs.postgres.sql  019_stack_update_runs.sqlite.sql  020_prompt_status_indexes.sqlite.sql  021_auth_keys.postgres.sql  021_auth_keys.sqlite.sql  (+4 more)
packaging/systemd/: acp-stack-update.service  acp-stack-update.timer  acp-stack.service  installer-test.Dockerfile
scripts/: browser-use-mcp  browser-use-mcp.py  build-release.sh  codex-audit.sh  docker-entrypoint.sh  docker-smoke.sh  docker-test.sh  get-providers.sh  install-agent-vm-deps.sh  install-systemd-smoke.sh  install-systemd-test.sh  install-systemd.sh  update-docs.sh
src/: acp_bridge.rs  agent_installer.rs  api.rs  auth.rs  cli.rs  commands.rs  config.rs  deps.rs  dev_gates.rs  edge.rs  envelope.rs  error.rs  events.rs  extensions.rs  fs_util.rs  http_hardening.rs  lib.rs  local_listener.rs  main.rs  mcp.rs  ownership.rs  permissions.rs  runtime.rs  secrets.rs  security.rs  state.rs  supervisor.rs  time_util.rs  tracing_init.rs  workspace.rs
src/api/: auth.rs  core.rs  routes.rs  ws.rs  ws_registry.rs
src/api/routes/: agent.rs  auth.rs  commands.rs  config.rs  deps.rs  extensions.rs  logs.rs  metrics.rs  native_config.rs  permissions.rs  providers.rs  security.rs  sessions.rs  status.rs  workspace.rs  ws.rs
src/cli/: agent.rs  array.rs  auth.rs  config.rs  core.rs  deps.rs  extensions.rs  init.rs  installer.rs  logging.rs  logs.rs  metrics.rs  reset.rs  secrets.rs  security.rs  serve.rs  sessions.rs  status.rs  subagent.rs  update.rs  workspace.rs  ws.rs
src/cli/agent/: check.rs  config.rs  default.rs  install.rs  provider.rs  provider_credentials.rs  (+9 more)
src/config/: schema.rs  validate.rs
src/error/: agent_install.rs  agent_runtime.rs  archive.rs  auth_http.rs  command.rs  config.rs  download.rs  edge.rs  extensions.rs  permission.rs  secrets.rs  security.rs  serve.rs  session.rs  state.rs  supabase.rs  workspace.rs  workspace_source.rs
src/extensions/: managed_state.rs  network_provider.rs
src/local_listener/: router.rs  socket.rs
src/runtime/: acp_bridge.rs  agent.rs  agent_headless_config.rs  agent_installer.rs  agent_registry.rs  commands.rs  dependencies.rs  deps.rs  deps_apply.rs  github_release.rs  health.rs  init_runner.rs  install.rs  logging.rs  mediation.rs  model_discovery.rs  npm_registry.rs  permissions.rs  process_runner.rs  provider_keys.rs  safe_download.rs  sandbox.rs  sink_redaction.rs  supabase_sink.rs  supervisor.rs  workspace_init.rs  workspace_sources.rs
src/security/: findings.rs  rules.rs
src/state/: agent.rs  auth.rs  commands.rs  core.rs  events.rs  ids.rs  init.rs  metrics.rs  permissions.rs  records.rs  rows.rs  schema.rs  security.rs  security_category.rs  sessions.rs  sink_outbox.rs  stack_update.rs
tests/: acp_bridge_tests.rs  acpctl_mcp_supabase_tests.rs  acpctl_mcp_tests.rs  acpctl_tests.rs  agent_api_tests.rs  agent_install_tests.rs  api_tests.rs  auth_tests.rs  cli_tests.rs  commands_api_tests.rs  config_tests.rs  extensions_managed_state_tests.rs  init_workspace_sources_tests.rs  placebo_agent_tests.rs  real_agent_model_options_tests.rs  release_acceptance_tests.rs  release_gate_tests.rs  sandbox_isolation_tests.rs  sandbox_network_tests.rs  secrets_tests.rs  sessions_api_tests.rs  state_tests.rs  supabase_sink_tests.rs  update-docs.test.sh  workspace_api_tests.rs
tests/fixtures/: valid-acp-stack.toml  valid-opencode-stack.toml  valid-placebo-stack.toml
(+80 files in other folders)
