[package]
name = "acp-stack"
version = "0.0.1"
edition = "2024"
description = "Self-hostable Linux runtime for ACP-compatible agents."
license = "Apache-2.0"
readme = "README.md"
rust-version = "1.88"

[lib]
path = "src/lib.rs"

[[bin]]
name = "acps"
path = "src/main.rs"

[[bin]]
name = "acpctl"
path = "src/bin/acpctl/main.rs"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.6.1", features = ["derive"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
age = "0.11.3"
rand = "0.10.1"
subtle = "2.6.1"
tempfile = "3.27.0"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "signal", "sync", "net", "time", "process", "io-util"] }
axum = { version = "0.8.9", features = ["ws", "multipart"] }
tower = "0.5.3"
tower-http = { version = "0.6.10", features = ["limit", "trace", "cors"] }
dashmap = "6.1.0"
zeroize = "1.8.2"
http = "1.3.2"
reqwest = { version = "0.13.3", default-features = false, features = ["blocking", "json", "rustls", "multipart"] }
agent-client-protocol = { version = "0.11.1", features = ["unstable_session_close", "unstable_session_resume"] }
sha2 = "0.10"
tokio-util = { version = "0.7", features = ["compat", "rt"] }
futures = "0.3"
libc = "0.2"
tokio-tungstenite = { version = "0.29.0", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }

[dev-dependencies]
assert_cmd = "2.2.2"
predicates = "3.1.4"
