[package]
name = "acp-stack"
version = "0.1.0"
edition = "2024"
description = "Self-hostable Linux runtime for ACP-compatible agents."
license = "Apache-2.0"
readme = "README.md"
rust-version = "1.95"

[lib]
path = "src/lib.rs"

[features]
default = []
dev-tools = []
test-fixtures = []

[[bin]]
name = "acps"
path = "src/main.rs"

[[bin]]
name = "acpctl"
path = "src/bin/acpctl/main.rs"

[[bin]]
name = "placebo-agent"
path = "src/bin/placebo_agent/main.rs"
required-features = ["test-fixtures"]

# Dev-only: diffs upstream ACP registry.json against data/registry.toml so the
# maintainer can keep the embedded catalog in sync. Not installed by
# `cargo install` consumers in the normal sense — invoked via `cargo run --bin
# sync-registry-check` from the workspace.
[[bin]]
name = "sync-registry-check"
path = "src/bin/sync_registry_check.rs"
required-features = ["dev-tools"]

[dependencies]
base64 = "0.22.1"
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.6.1"
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
semver = "1.0.27"
thiserror = "2.0.18"
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
age = "0.11.3"
rand = "0.10.1"
rpassword = "7.5.3"
subtle = "2.6.1"
tempfile = "3.27.0"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "signal", "sync", "net", "time", "process", "io-util"] }
axum = { version = "0.8.9", features = ["ws", "multipart"] }
tower = "0.5.3"
tower-http = { version = "0.6.10", features = ["limit", "trace", "cors"] }
dashmap = "6.1.0"
zeroize = "1.8.2"
http = "1.3.2"
reqwest = { version = "0.13.3", default-features = false, features = ["blocking", "json", "rustls", "multipart"] }
rustls = "0.23.40"
tokio-postgres = { version = "0.7.15", features = ["with-serde_json-1"] }
tokio-postgres-rustls = "0.13.0"
webpki-roots = "1.0.7"
agent-client-protocol = { version = "0.11.1", features = ["unstable_message_id", "unstable_session_close", "unstable_session_fork", "unstable_session_model", "unstable_session_resume", "unstable_session_usage"] }
sha2 = "0.10"
tokio-util = { version = "0.7", features = ["compat", "rt"] }
futures = "0.3"
libc = "0.2"
tokio-tungstenite = { version = "0.29.0", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
flate2 = "1.0.35"
tar = "0.4.46"
zip = { version = "5.1.1", default-features = false, features = ["deflate"] }
rmcp = { version = "1.7.0", features = [
    "transport-io",
    "transport-streamable-http-server",
] }
schemars = "0.8.22"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["server", "tokio", "service"] }
roxmltree = "0.21.1"
# Pinned to 0.12 so it shares the `digest` 0.10 crate with `sha2` above;
# newer hmac uses `digest` 0.11 which would force a dual-tree pull.
hmac = "0.12"
cliclack = "0.5.4"

[dev-dependencies]
assert_cmd = "2.2.2"
base64 = "0.22.1"
predicates = "3.1.4"
rmcp = { version = "1.7.0", features = [
    "transport-io",
    "transport-streamable-http-server",
    "client",
    "transport-child-process",
    "transport-streamable-http-client-unix-socket",
] }
tokio-rustls = { version = "0.26.4", default-features = false }

# Release binaries ship to cloud sandboxes: strip symbols and favor a smaller,
# faster artifact. `lto = "thin"` keeps link time reasonable while still
# inlining across crates; `panic` is left at the default `unwind` so the
# integration tests that drive the release binary keep their backtraces.
[profile.release]
strip = true
lto = "thin"
codegen-units = 1
